# gil

./: .appveyor.yml  .gitignore  .travis.yml  CLAUDE.md  MANIFEST.in  README.md  TODO.md  gil  gil.bat  gil.py  gil.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos.yml  build-windows-cygwin.yml  build-windows-mingw.yml  build-windows-msvc.yml  build-windows-msys2.yml  build-windows-vs.yml  doxygen.yml
images/: sample.xml
sample/: .gitignore  .gitlinks
